--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "android-relase": "ENVFILE=.env.dev react-native run-android --variant=release"
   },
   "dependencies": {
+    "moment": "^2.24.0",
+    "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.8",
     "react-native-camera": "^2.9.0",
+    "react-native-config": "^0.11.7",
     "react-native-confirmation-code-input": "^1.0.4",
     "react-native-gesture-handler": "^1.2.1",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
