--- a/package.json
+++ b/package.json
@@ -3,8 +3,16 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "compile": "tsc",
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest",
+    "removeall": "rm -rf android rm -rf ios rm -rf node_modules",
+    "rmnode": "rm -rf node_modules",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "test": "npm run unit && npm run jest && npm run lint",
+    "jest": "node node_modules/jest/bin/jest.js",
+    "lint": "./node_modules/.bin/eslint *.js screen/**/*.js screen/ class/ models/ loc/ --fix",
+    "unit": "./node_modules/.bin/mocha tests/**/*.js",
     "android-dev": "ENVFILE=.env.dev react-native run-android",
     "build-android-dev": "export ENVFILE=.env.dev && cd android && ./gradlew assembleRelease && cd ..",
     "android-relase": "ENVFILE=.env.dev react-native run-android --variant=release"
@@ -43,5 +51,11 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "rnpm": {
+    "assets": [
+      "./src/assets/fonts/*",
+      "./src/assets/fonts/firaSans"
+    ]
   }
 }
