--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -71,14 +71,13 @@ import com.android.build.OutputFile
  *   extraPackagerArgs: []
  * ]
  */
-  
+
 project.ext.react = [
     entryFile: "index.js"
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
-apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
-apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
+
 /**
  * Set this to true to create two separate APKs instead of one:
  *   - An APK that only works on ARM devices
@@ -108,7 +107,6 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
-        missingDimensionStrategy 'react-native-camera', 'general' 
     }
     splits {
         abi {
@@ -140,13 +138,13 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-sqlite-storage')
-    implementation project(':react-native-config')
     implementation project(':react-native-vector-icons')
     implementation project(':react-native-svg')
     implementation project(':react-native-share')
     implementation project(':react-native-linear-gradient')
     implementation project(':react-native-gesture-handler')
+    implementation project(':react-native-device-info')
+    implementation project(':react-native-config')
     implementation project(':react-native-camera')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
