--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   },
   "dependencies": {
     "@types/node": "^10.12.18",
+    "add": "^2.0.6",
     "moment": "^2.24.0",
     "native-base": "^2.12.1",
+    "prop-types": "^15.7.2",
     "react": "16.8.3",
     "react-native": "0.59.8",
-    "react-native-camera": "^2.9.0",
+    "react-native-camera": "1.6.3",
     "react-native-config": "^0.11.7",
     "react-native-confirmation-code-input": "^1.0.4",
     "react-native-device-info": "^2.0.3",
@@ -32,12 +34,14 @@
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
     "react-native-linear-gradient": "^2.5.4",
     "react-native-permissions": "^1.1.1",
+    "react-native-popup-dialog": "^0.18.2",
     "react-native-share": "^1.2.1",
     "react-native-sqlite-storage": "^3.3.10",
     "react-native-super-grid": "^3.0.4",
     "react-native-svg": "^9.4.0",
     "react-native-vector-icons": "^6.4.2",
-    "react-navigation": "^3.11.0"
+    "react-navigation": "^3.11.0",
+    "yarn": "^1.16.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
