--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-device-info": "^2.0.3",
     "react-native-gesture-handler": "^1.2.1",
     "react-native-grid-component": "^2.0.0",
+    "react-native-image-slider-show": "^1.0.3",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
     "react-native-linear-gradient": "^2.5.4",
     "react-native-permissions": "^1.1.1",
